--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+, "app/form.jsx", "app/auth.jsx", "app/_layout.jsx", "app/+html.jsx"  ]
 }
